--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -59,3 +59,28 @@
   transform: scale(1.3);
   cursor: pointer;
 }
+
+/* card container */
+.card--container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-top: 2rem;
+}
+.card {
+  flex: 1;
+  background: #dde6ed;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;3
+  flex-direction: row;
+  gap: 20px;
+  transition: 0.5s ease-in-out;
+}
+.card:hover {
+  transform: scale(1.04);
+  cursor: pointer;
+}
+.card--cover {
+}
