--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.dashboard {
+/* .dashboard {
   display: flex;
   gap: 20px;
 }
@@ -11,4 +11,57 @@
   display: flex;
   gap: 1.5rem;
   justify-content: space-between;
+} */
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+.container {
+  display: flex;
+}
+main {
+  width: 100%;
+  padding: 20px;
+}
+.sidebar {
+  background: #000;
+  color: #fff;
+  height: 100vh;
+  width: 200px;
+  transition: all 0.5s;
+}
+.top_section {
+  display: flex;
+  align-items: center;
+  padding: 20px 15px;
+}
+.logo {
+  font-size: 30px;
+  transform: scale(0.3s);
+}
+.bars {
+  display: flex;
+  font-size: 25px;
+  margin-left: 50px;
+}
+.link {
+  display: flex;
+  color: #fff;
+  padding: 10px 15px;
+  gap: 15px;
+  transition: all 0.5s;
+}
+.link:hover {
+  background: rgb(14, 74, 114);
+  color: #000;
+  transition: all 0.5s;
+}
+.active {
+  background: rgb(21, 23, 24);
+  color: #000;
+}
+.icon,
+.link_text {
+  font-size: 20px;
 }
