--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -11,6 +11,7 @@
 .header--title {
   color: #526d82;
 }
+
 .header--activity {
   display: flex;
   align-items: center;
@@ -67,6 +68,13 @@
   align-items: center;
   margin-top: 2rem;
 }
+@media screen and (max-width: 768px) {
+  .card--container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .card {
   flex: 1;
   background: #dde6ed;
@@ -100,4 +108,10 @@
   font-size: 14px;
   color: #526d82;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+    width: 100%;
+  }
 }
